# amp

./: AGENTS.md  CLAUDE.md  LICENSE  README.md
_journal/: 2026-07-16.md
src/: Cargo.toml
src/crates/cosmix-lib-amp/: Cargo.toml
src/crates/cosmix-lib-amp/src/: amp.rs  lib.rs  native_port.rs  service_info.rs
src/crates/cosmix-lib-buildinfo/: Cargo.toml
src/crates/cosmix-lib-buildinfo/src/: lib.rs
src/crates/cosmix-lib-client/: Cargo.toml
src/crates/cosmix-lib-client/examples/: test_noded.rs
src/crates/cosmix-lib-client/src/: lib.rs  native.rs  supervised.rs  types.rs  web.rs
src/crates/cosmix-lib-client/tests/: supervised_reconnect.rs
src/crates/cosmix-lib-log/: Cargo.toml  README.md
src/crates/cosmix-lib-log/src/: defaults.rs  handle.rs  init.rs  lib.rs  opts.rs  prometheus_attach.rs
src/crates/cosmix-lib-log/src/stats/: amp.rs  classify.rs  dispatch.rs  event_counter.rs  jsonl_sink.rs  labels_hash.rs  mod.rs  process_gauges.rs  prometheus.rs  recorder.rs  rollup.rs  sink.rs  snapshot.rs  types.rs
src/crates/cosmix-lib-log/tests/: init_env_wins.rs  init_install.rs  init_none.rs  init_stats_interval_ceiling.rs  opts_defaults.rs
src/crates/cosmix-lib-props-core/: Cargo.toml
src/crates/cosmix-lib-props-core/src/: amp.rs  describe.rs  diff.rs  lib.rs  path.rs  publish.rs  redact.rs  revwrite.rs  tree.rs  value.rs
