[package]
name = "cosmix-lib-props-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SPEC 07 property surface — pure-type core (PropTree, PropPath, PropValue) + opt-in AMP read wire"

[lib]
name = "cosmix_props_core"
path = "src/lib.rs"

[features]
default = []
# AMP wire surface: SPEC 07 §2 `dispatch_props` + SPEC 07 §3/§4
# `publish::*` builders. Pulls `cosmix-lib-amp` for `AmpMessage` and
# `chrono` for the RFC-3339 timestamp in
# `publish::build_props_changed_message`. C2 of the lib-props split
# moves the read-side AMP code into this feature.
amp = ["dep:cosmix-lib-amp", "dep:chrono"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
cosmix-lib-amp = { path = "../cosmix-lib-amp", optional = true }
chrono = { workspace = true, optional = true }
